# concert_services

./: .gitignore  README.md
concert_service_admin/: CHANGELOG.rst  package.xml
concert_service_admin/services/admin/: admin.interactions  admin.service
concert_service_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
concert_service_gazebo/launch/: robot.launch  test_gazebo_gateway.launch
concert_service_gazebo/robots/: kobuki.launch  turtlebot.launch
concert_service_gazebo/robots/kobuki/: kobuki.launch
concert_service_gazebo/scripts/: gazebo_robot_manager.py  gazebo_segbot_manager
concert_service_gazebo/services/gazebo/: gazebo.parameters  gazebo.service
concert_service_gazebo/services/gazebo_robot_world/: gazebo_robot_world.launch  gazebo_robot_world.parameters
concert_service_gazebo/services/segbot/: segbot.launch  segbot.service
concert_service_gazebo/solutions/: gazebo.services
concert_service_gazebo/src/concert_service_gazebo/: gazebo_robot_manager.py  robot_manager.py  utils.py
concert_service_image_stream/: CHANGELOG.rst  package.xml
concert_service_image_stream/scripts/: image_stream_pimp.py
concert_service_indoor_2d_map_prep/: CHANGELOG.rst  package.xml
concert_service_indoor_2d_map_prep/scripts/: make_a_map_pimp.py
concert_service_indoor_2d_map_prep/services/indoor_2d_map_prep/: indoor_2d_map_prep.interactions  indoor_2d_map_prep.parameters
concert_service_initialisation/: CHANGELOG.rst  package.xml
concert_service_initialisation/scripts/: make_a_map_pimp.py
concert_service_initialisation/services/make_a_map/: make_a_map.interactions
concert_service_initialisation/services/map_annotation/: make_a_map.service  map_annotation.interactions  map_annotation.service
concert_service_make_a_map/: CMakeLists.txt
concert_service_make_a_map/scripts/: make_a_map_pimp.py
concert_service_make_a_map/services/make_a_map/: make_a_map.launch  make_a_map.parameters
concert_service_teleop/: .project  CHANGELOG.rst  package.xml
concert_service_teleop/scripts/: teleop_pimp.py
concert_service_teleop/services/teleop/: teleop.interactions  teleop.service
concert_service_turtlesim/: CHANGELOG.rst  CMakeLists.txt  package.xml
concert_service_turtlesim/launch/: turtle.launch  turtle2.launch
concert_service_turtlesim/scripts/: hatchling.py  turtle_herder.py  turtle_herder2.py
concert_service_turtlesim/services/turtlesim/: turtlesim.launch  turtlesim.parameters  turtlesim.service
concert_service_turtlesim/services/turtlesim2/: turtlesim2.launch  turtlesim2.service
concert_service_waypoint_navigation/: CHANGELOG.rst  package.xml
concert_service_waypoint_navigation/launch/: waypoint_navigation_controller.launch
concert_service_waypoint_navigation/rviz/: waypoint_navigation.rviz
concert_service_waypoint_navigation/scripts/: command_navigator.py  publish_world.py  waypoint_nav_pimp.py
concert_service_world_canvas/: CMakeLists.txt  package.xml
concert_service_world_canvas/scripts/: export.py  import.py  save_map.py
concert_service_world_canvas/services/world_canvas/: world_canvas.launch  world_canvas.service
concert_services/: CHANGELOG.rst  package.xml
rocon_service_admin/: .project  CMakeLists.txt  package.xml
rocon_service_admin/services/admin/: admin.interactions  admin.service
rocon_service_teleop/: .project  CMakeLists.txt  package.xml
rocon_service_teleop/scripts/: teleop_pimp.py
rocon_service_teleop/services/teleop/: teleop.launch  teleop.parameters  teleop.service
rocon_service_turtlesim/: .project  CMakeLists.txt  package.xml
rocon_service_turtlesim/launch/: turtle.launch
rocon_service_turtlesim/scripts/: hatchling.py  turtle_herder.py  turtle_herder2.py  turtle_herder_v2.py
rocon_service_turtlesim/services/turtlesim/: turtlesim.launch  turtlesim.service
rocon_service_turtlesim/services/turtlesim2/: turtlesim2.launch  turtlesim2.parameters  turtlesim2.service
rocon_services/: .project  CMakeLists.txt  package.xml
(+9 files in other folders)
