<package>
  <name>rocon_service_turtlesim</name>
  <version>0.1.0</version>
  <description>
      Sets up the turtlesim engine as a service to assist in spawning/killing turtle concert clients.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rocon_service_turtlesim</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_services</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_services/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_gateway</run_depend>
  <run_depend>gateway_msgs</run_depend>
  <run_depend>rocon_tutorial_msgs</run_depend>
  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>rocon_app_manager_msgs</run_depend>

  <export>
    <rocon_service>services/turtlesim/turtlesim.service</rocon_service>
  </export>
</package>
