<?xml version="1.0"?>
<package>
  <name>rocon_services</name>
  <version>0.1.0</version>
  <description>
    Officially supported rocon services.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_services</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_services</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_services/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rocon_service_admin</run_depend>
  <run_depend>rocon_service_turtlesim</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

